[gd_scene load_steps=9 format=3 uid="uid://dtwm5gj2hvijf"]

[ext_resource type="FontFile" uid="uid://ycaiqwy2b78f" path="res://assets/SpaceMono-Regular.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://b4g18jrqxbjuu" path="res://assets/Fantasy/Background/Grass field.png" id="2_8rr6j"]
[ext_resource type="Script" path="res://Main.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://b08lpxupe4h7c" path="res://Player.tscn" id="4_xjpci"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(130, 121)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Main" type="Node2D"]
script = ExtResource("4")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(270, 488)
scale = Vector2(0.796323, 0.796323)
texture = ExtResource("2_8rr6j")
region_enabled = true
region_rect = Rect2(0, 0, 783.623, 1269.55)

[node name="LoseArea" type="Area2D" parent="."]
position = Vector2(0, 5.55865)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2(281, 868.941)
shape = SubResource("1")

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnContainer"]
position = Vector2(40, -21)

[node name="Position2D2" type="Marker2D" parent="SpawnContainer"]
position = Vector2(140, -20)

[node name="Position2D3" type="Marker2D" parent="SpawnContainer"]
position = Vector2(233, -28)

[node name="Position2D4" type="Marker2D" parent="SpawnContainer"]
position = Vector2(354, -23)

[node name="Position2D5" type="Marker2D" parent="SpawnContainer"]
position = Vector2(492, -14)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartScreen" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StartScreen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Русы против ящеров на клавиатуре"
horizontal_alignment = 1

[node name="ChooseLanguage" type="Label" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Выберите язык"
horizontal_alignment = 1

[node name="ChooseRussian" type="Button" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "Русский"

[node name="ChooseEnglish" type="Button" parent="CanvasLayer/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "English"

[node name="GameOverScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "GAME OVER"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AccuracyLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Accuracy:"

[node name="AccuracyValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameOverKilledLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Killed:"

[node name="GameOverKilledValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "0"

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "RESTART"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 920.0
offset_right = 533.0
offset_bottom = 945.0
mouse_filter = 2
alignment = 2

[node name="EnemiesKilledLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "Killed:"

[node name="EnemiesKilledValue" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 7.0
offset_top = 920.0
offset_right = 124.0
offset_bottom = 945.0
mouse_filter = 2

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "Difficulty:"

[node name="DifficultyValue" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "0"

[node name="Player" parent="." instance=ExtResource("4_xjpci")]
position = Vector2(282, 874)

[connection signal="body_entered" from="LoseArea" to="." method="_on_LoseArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/StartScreen/CenterContainer/VBoxContainer/ChooseRussian" to="." method="_on_ChooseRussian_pressed"]
[connection signal="pressed" from="CanvasLayer/StartScreen/CenterContainer/VBoxContainer/ChooseEnglish" to="." method="_on_ChooseEnglish_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
